# transcribe

./: .gitignore  4.4.0  MANIFEST.in  README.md  clean_transcription.py  context.md  docker-compose.yml  environment.yml  environment_cpu.yml  environment_cuda.yml  environment_mac.yml  error.py  flac2mp3.py  install.md  move_recode.ipynb  process_audio.py  processing_recipe.yaml  pyproject.toml  requerments.txt  run_model.ipynb  scanner.yml  tourch_test.ipynb  transcribe_batch.py  wister2_label_studio_format.py
old code/: copy_files.py  enviorment-cuda.yml  run_model.ipynb  scanner.py  scanner.yml  to_markdown.py  tourch_test.ipynb  transcribe_batch.py
src/qualivault/: __init__.py  audio.py  cli.py  core.py  obsidian_workflow.py  paths.py  pipeline.py  recipe.py  state.py  validation.py  validation_workflow.py
src/qualivault/templates/: 00_Setup_and_Scan.ipynb  01_Prepare_Audio.ipynb  02_Transcribe copy.ipynb  02_Transcribe.ipynb  03_Export_Obsidian.ipynb  04_Validate_Transcripts copy.ipynb  04_Validate_Transcripts.ipynb  05_Export_To_Obsidian.ipynb  config copy.yml  config.yml
